--- a/llm_evaluation_metrics.ipynb
+++ b/llm_evaluation_metrics.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "7841b474-b0c8-4df5-bd78-f2d3d30254d8",
    "metadata": {},
    "outputs": [
@@ -58,8 +58,8 @@
       "Loading IMDb dataset...\n",
       "Using the same subset as Assignment 7 (2000 train, 500 test)\n",
       "\n",
-      "✅ Test dataset loaded: 500 examples\n",
-      "✅ Using seed=42 (same as Assignment 7)\n",
+      "Test dataset loaded: 500 examples\n",
+      "Using seed=42 (same as Assignment 7)\n",
       "\n",
       "First test example:\n",
       "Text: <br /><br />When I unsuspectedly rented A Thousand Acres, I thought I was in for an entertaining Kin...\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "445a2dbd-2a19-43ca-901d-a597b823f64c",
    "metadata": {},
    "outputs": [
@@ -99,8 +99,8 @@
      "text": [
       "Loading tokenizer...\n",
       "Tokenizing test dataset...\n",
-      "✅ Tokenizer loaded: distilbert-base-uncased\n",
-      "✅ Test dataset tokenized: 500 examples\n",
+      "Tokenizer loaded: distilbert-base-uncased\n",
+      "Test dataset tokenized: 500 examples\n",
       "\n",
       "Tokenized example shape:\n",
       "  - input_ids length: 512\n",
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "aea3c1b3-4cfa-4dfb-879a-534e4b5e86b0",
    "metadata": {},
    "outputs": [
@@ -148,6 +148,9 @@
       "Searching for checkpoint-750...\n",
       "\n",
       "=== Files in current directory ===\n",
+      "  confusion_matrix.png\n",
+      "  tmp_trainer\n",
+      "  Readme.md\n",
       "  results\n",
       "  .ipynb_checkpoints\n",
       "  llm_evaluation_metrics.ipynb\n",
@@ -156,7 +159,7 @@
       "  checkpoint-750\n",
       "  checkpoint-500\n",
       "\n",
-      "✅ FOUND IT! checkpoint-750 is in ./results/checkpoint-750\n",
+      "FOUND IT! checkpoint-750 is in ./results/checkpoint-750\n",
       "\n",
       "Files inside ./results/checkpoint-750:\n",
       "  - adapter_model.safetensors\n",
@@ -208,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "2958dc8e",
    "metadata": {},
    "outputs": [
@@ -232,9 +235,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "✅ Base model loaded: distilbert-base-uncased\n",
-      "✅ LoRA adapter loaded from: ./results/checkpoint-750\n",
-      "✅ Model ready for evaluation\n",
+      "Base model loaded: distilbert-base-uncased\n",
+      "LoRA adapter loaded from: ./results/checkpoint-750\n",
+      "Model ready for evaluation\n",
       "\n",
       "Model device: cpu\n"
      ]
@@ -267,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "d39b124b",
    "metadata": {},
    "outputs": [
@@ -292,7 +295,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Predictions complete!\n",
+      "Predictions complete!\n",
       "\n",
       "Shape of predictions: (500, 2)\n",
       "Shape of true labels: (500,)\n",
@@ -335,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "719bc0bb",
    "metadata": {},
    "outputs": [
@@ -356,7 +359,7 @@
       "\n",
       "============================================================\n",
       "\n",
-      "📊 Results Table (for README):\n",
+      "Results Table (for README):\n",
       "           Metric  Score\n",
       "         Accuracy 0.8820\n",
       "Precision (Macro) 0.8820\n",
@@ -403,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "7bcb9c49",
    "metadata": {},
    "outputs": [
@@ -412,7 +415,7 @@
      "output_type": "stream",
      "text": [
       "Generating Confusion Matrix...\n",
-      "✅ Confusion matrix saved as 'confusion_matrix.png'\n"
+      "Confusion matrix saved as 'confusion_matrix.png'\n"
      ]
     },
     {
@@ -504,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "797f811c",
    "metadata": {},
    "outputs": [
@@ -520,7 +523,7 @@
       "  NEGATIVE: 87.40% correct (worse)\n",
       "  POSITIVE: 89.02% correct\n",
       "\n",
-      "🎯 Worst-performing class: NEGATIVE\n",
+      "Worst-performing class: NEGATIVE\n",
       "   Accuracy: 87.40%\n",
       "   Misclassifications: 32 out of 254 examples\n",
       "\n",
